--- a/part-2-browser-document-events-interfaces/document/coordinates/index.html
+++ b/part-2-browser-document-events-interfaces/document/coordinates/index.html
@@ -77,6 +77,8 @@
 
         // better to use a css class for the style here
         message.style.cssText = "position: fixed; color: red";
+
+        // assign coordenates, don't forget 'px'!
       }
 
       console.log(elem3);
