--- a/part-2-browser-document-events-interfaces/document/coordinates/index.html
+++ b/part-2-browser-document-events-interfaces/document/coordinates/index.html
@@ -83,6 +83,10 @@
 
         message.style.left = coords.left + "px";
         message.style.top = coords.bottom + "px";
+
+        message.innerHTML = html;
+
+        return message;
       }
 
       console.log(elem3);
