--- a/part-2-browser-document-events-interfaces/document/coordinates/index.html
+++ b/part-2-browser-document-events-interfaces/document/coordinates/index.html
@@ -96,7 +96,8 @@
 
       // Usage:
       // add it for 5 seconds in the document
-      const message = createMessageUnder();
+      const message = createMessageUnder(elem3, "Hello, world!");
+      console.log(message);
     </script>
 
     <script>
