--- a/part-2-browser-document-events-interfaces/document/coordinates/index.html
+++ b/part-2-browser-document-events-interfaces/document/coordinates/index.html
@@ -66,7 +66,12 @@
 
     <h2>elementFromPoint(x, y)</h2>
 
-    <button type="button">Using for "fixed" positioning</button>
+    <button
+      onclick="handleClick()"
+      type="button"
+    >
+      Using for "fixed" positioning
+    </button>
 
     <script>
       const elem3 = document.getElementById("coords-show-mark");
@@ -91,11 +96,14 @@
 
       // Usage:
       // add it for 5 seconds in the document
-      const message = createMessageUnder(elem3, "Hello, world!");
-      document.body.append(message);
-      setTimeout(function () {
-        message.remove();
-      }, 5000);
+
+      function handleClick() {
+        const message = createMessageUnder(elem3, "Hello, world!");
+        document.body.append(message);
+        setTimeout(function () {
+          message.remove();
+        }, 5000);
+      }
     </script>
 
     <script>
@@ -105,7 +113,7 @@
       const elem = document.elementFromPoint(centerX, centerY);
 
       if (elem) {
-        elem.style.cssText = "color: white; background: red; padding: 10px";
+        // elem.style.cssText = "color: white; background: red; padding: 10px";
         console.log(elem);
       }
 
