--- a/part-2-browser-document-events-interfaces/document/coordinates/index.html
+++ b/part-2-browser-document-events-interfaces/document/coordinates/index.html
@@ -46,6 +46,8 @@
       </p>
     </div>
 
+    <h2>Document Coordenates</h2>
+
     <div>
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil
