--- a/part-2-browser-document-events-interfaces/document/coordinates/index.html
+++ b/part-2-browser-document-events-interfaces/document/coordinates/index.html
@@ -54,10 +54,10 @@
         const box = elem.getBoundingClientRect();
 
         return {
-          top: "",
-          right: "",
-          bottom: "",
-          left: "",
+          top: box.top + window.pageYOffset,
+          right: box.right + window.pageXOffset,
+          bottom: box.bottom + window.pageYOffset,
+          left: box.left + window.pageXOffset,
         };
       }
     </script>
