--- a/part-2-browser-document-events-interfaces/document/resume/index.html
+++ b/part-2-browser-document-events-interfaces/document/resume/index.html
@@ -2,5 +2,10 @@
 <html>
   <body>
     <h1>Browser environment, specs</h1>
+    <script>
+      function sayHi() {
+        console.log("Browser environment, specs: window as global object");
+      }
+    </script>
   </body>
 </html>
