--- a/part-2-browser-document-events-interfaces/document/resume/index.html
+++ b/part-2-browser-document-events-interfaces/document/resume/index.html
@@ -6,6 +6,8 @@
       function sayHi() {
         console.log("Browser environment, specs: window as global object");
       }
+
+      window.sayHi();
     </script>
   </body>
 </html>
