--- a/part-2-browser-document-events-interfaces/document/resume/index.html
+++ b/part-2-browser-document-events-interfaces/document/resume/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Browser environment, specs</h1>
+    <h1>1. Browser environment, specs</h1>
     <script>
       function sayHi() {
         console.log("Browser environment, specs: window as global object");
