--- a/part-2-browser-document-events-interfaces/document/resume/index.html
+++ b/part-2-browser-document-events-interfaces/document/resume/index.html
@@ -7,6 +7,7 @@
         console.log("Browser environment, specs: window as global object");
       }
 
+      // global functions are methods of the global object:
       window.sayHi();
     </script>
   </body>
