--- a/part-2-browser-document-events-interfaces/document/resume/index.html
+++ b/part-2-browser-document-events-interfaces/document/resume/index.html
@@ -9,6 +9,12 @@
 
       // global functions are methods of the global object:
       window.sayHi();
+
+      // And we can use it as a browser window, to show the window height:
+      console.log(
+        "Browser environment, specs: window as a browser window",
+        window.innerHeight
+      );
     </script>
   </body>
 </html>
