--- a/part-2-browser-document-events-interfaces/document/resume/index.html
+++ b/part-2-browser-document-events-interfaces/document/resume/index.html
@@ -2,6 +2,17 @@
 <html>
   <body>
     <h1>1. Browser environment, specs</h1>
+
+    <h1>2. DOM (Document Object Model)</h1>
+
+    <script>
+      // change the background color to red
+      document.body.style.backgroundColor = "red";
+      setTimeout(function () {
+        document.body.style.backgroundColor = "";
+      }, 1000);
+    </script>
+
     <script>
       function sayHi() {
         console.log("Browser environment, specs: window as global object");
