--- a/part-2-browser-document-events-interfaces/document/resume/index.html
+++ b/part-2-browser-document-events-interfaces/document/resume/index.html
@@ -8,6 +8,8 @@
     <script>
       // change the background color to red
       document.body.style.backgroundColor = "red";
+
+      // change it back after 1 second
       setTimeout(function () {
         document.body.style.backgroundColor = "";
       }, 1000);
