--- a/part-2-browser-document-events-interfaces/document/resume/index.html
+++ b/part-2-browser-document-events-interfaces/document/resume/index.html
@@ -5,6 +5,13 @@
 
     <h1>2. DOM (Document Object Model)</h1>
 
+    <h1>3. BOM (Browser Object Model)</h1>
+
+    <script>
+      console.log(navigator);
+      console.log(location);
+    </script>
+
     <script>
       // change the background color to red
       document.body.style.backgroundColor = "red";
