--- a/part-2-browser-document-events-interfaces/document/resume/index.html
+++ b/part-2-browser-document-events-interfaces/document/resume/index.html
@@ -8,8 +8,10 @@
     <h1>3. BOM (Browser Object Model)</h1>
 
     <script>
-      console.log(navigator);
-      console.log(location);
+      console.log("userAgent", navigator.userAgent);
+      console.log("platform", navigator.platform);
+
+      console.log("location", location.href);
     </script>
 
     <script>
