--- a/part-2-browser-document-events-interfaces/document/resume/index.html
+++ b/part-2-browser-document-events-interfaces/document/resume/index.html
@@ -12,6 +12,10 @@
       console.log("platform", navigator.platform);
 
       console.log("location", location.href);
+
+      if (confirm("Go to Wikipedia?")) {
+        location.href = "https://wikipedia.org";
+      }
     </script>
 
     <script>
