--- a/part-2-browser-document-events-interfaces/document/resume/index.html
+++ b/part-2-browser-document-events-interfaces/document/resume/index.html
@@ -7,6 +7,8 @@
 
     <h1>3. BOM (Browser Object Model)</h1>
 
+    <p>The function alert/confirm/prompt are also a part of the BOM</p>
+
     <script>
       console.log("userAgent", navigator.userAgent);
       console.log("platform", navigator.platform);
