--- a/part-2-browser-document-events-interfaces/document/resume/dom-tree.html
+++ b/part-2-browser-document-events-interfaces/document/resume/dom-tree.html
@@ -5,6 +5,7 @@
 
     <script>
       console.log("Every HTML tag is an object");
+      console.log("The text inside a tag is an object as well");
     </script>
   </body>
 </html>
