--- a/part-2-browser-document-events-interfaces/document/resume/dom-tree.html
+++ b/part-2-browser-document-events-interfaces/document/resume/dom-tree.html
@@ -4,6 +4,11 @@
     <h1>DOM tree</h1>
 
     <script>
+      const body = document.body;
+      console.log(body);
+    </script>
+
+    <script>
       console.log("Every HTML tag is an object");
       console.log("The text inside a tag is an object as well");
     </script>
