--- a/part-2-browser-document-events-interfaces/document/resume/dom-tree.html
+++ b/part-2-browser-document-events-interfaces/document/resume/dom-tree.html
@@ -6,6 +6,7 @@
     <script>
       const body = document.body;
       body.style.backgroundColor = "pink";
+      console.log(body.tagName);
 
       setTimeout(function () {
         body.style.backgroundColor = "";
