--- a/part-2-browser-document-events-interfaces/document/resume/dom-tree.html
+++ b/part-2-browser-document-events-interfaces/document/resume/dom-tree.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>DOM tree</h1>
+    <h1>1. DOM tree</h1>
+
+    <h1>2. An example of the DOM</h1>
 
     <script>
       const body = document.body;
