--- a/part-2-browser-document-events-interfaces/document/resume/dom-tree.html
+++ b/part-2-browser-document-events-interfaces/document/resume/dom-tree.html
@@ -10,7 +10,9 @@
         "Spaces and newlines before head are ignored for historical reasons"
       );
 
-      console.log("");
+      console.log(
+        "If we put something after body, the that is  automatically is moved inside the body, at the end."
+      );
     </script>
 
     <script>
