--- a/part-2-browser-document-events-interfaces/document/resume/dom-tree.html
+++ b/part-2-browser-document-events-interfaces/document/resume/dom-tree.html
@@ -5,6 +5,8 @@
 
     <h1>2. An example of the DOM</h1>
 
+    <h1>3. Autocorrection</h1>
+
     <script>
       console.log(
         "Spaces and newlines before head are ignored for historical reasons"
