--- a/part-2-browser-document-events-interfaces/document/resume/dom-tree.html
+++ b/part-2-browser-document-events-interfaces/document/resume/dom-tree.html
@@ -7,6 +7,8 @@
 
     <h1>3. Autocorrection</h1>
 
+    <h1>4. Other node types</h1>
+
     <script>
       console.log(
         "Spaces and newlines before head are ignored for historical reasons"
