--- a/part-2-browser-document-events-interfaces/document/resume/dom-tree.html
+++ b/part-2-browser-document-events-interfaces/document/resume/dom-tree.html
@@ -11,6 +11,13 @@
 
     <script>
       console.log(
+        "There are 12 node types. In practice we usually work 4 of them: document, element nodes, text nodes, and comment"
+      );
+    </script>
+
+    <!-- comment -->
+    <script>
+      console.log(
         "Spaces and newlines before head are ignored for historical reasons"
       );
 
