--- a/part-2-browser-document-events-interfaces/document/resume/dom-tree.html
+++ b/part-2-browser-document-events-interfaces/document/resume/dom-tree.html
@@ -9,6 +9,8 @@
 
     <h1>4. Other node types</h1>
 
+    <h1>5. Interactions with console</h1>
+
     <script>
       console.log(
         "There are 12 node types. In practice we usually work 4 of them: document, element nodes, text nodes, and comment"
