--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -3,6 +3,8 @@
   <body>
     <script>
       console.log(document);
+      console.log(document.firstChild);
+      console.log(document.firstElementChild);
     </script>
   </body>
 </html>
