--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -5,6 +5,8 @@
       console.log(document);
       console.log(document.firstChild);
       console.log(document.firstElementChild);
+
+      console.log("All operations on the DOM start with document object.");
     </script>
   </body>
 </html>
