--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -7,6 +7,9 @@
       console.log(document.firstElementChild);
 
       console.log("All operations on the DOM start with document object.");
+      console.log(
+        "That's the main entry point to DOM. From it we can access any node."
+      );
     </script>
   </body>
 </html>
