--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -15,7 +15,8 @@
       );
 
       console.log("<html>", document.documentElement);
-      console.log("<head>", document.head.outerHTML);
+      console.log("<head>", document.head);
+      console.log("<body>", document.body);
     </script>
   </body>
 </html>
