--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -7,20 +7,13 @@
     </script>
   </head>
   <body>
+    <h1>Children: childNodes, firstChild, lastChild</h1>
+
     <script>
       console.log("From BODY", document.body);
     </script>
 
     <script>
-      console.log(document);
-      console.log(document.firstChild);
-      console.log(document.firstElementChild);
-
-      console.log("All operations on the DOM start with document object.");
-      console.log(
-        "That's the main entry point to DOM. From it we can access any node."
-      );
-
       console.log("<html>", document.documentElement);
       console.log("<head>", document.head);
       console.log("<body>", document.body);
