--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -9,6 +9,14 @@
   <body>
     <h1>Children: childNodes, firstChild, lastChild</h1>
 
+    <div id="body">
+      <div>Begin</div>
+
+      <ul>
+        <li><b>Information</b></li>
+      </ul>
+    </div>
+
     <script>
       console.log("From BODY", document.body);
     </script>
