--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -18,6 +18,11 @@
     </div>
 
     <script>
+      const body = document.getElementById("body");
+      console.log(body);
+    </script>
+
+    <script>
       console.log("From BODY", document.body);
     </script>
 
