--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -19,7 +19,7 @@
 
     <script>
       const body = document.getElementById("body");
-      console.log(body);
+      console.log("body", body.childNodes);
     </script>
 
     <script>
