--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -20,6 +20,7 @@
     <script>
       const body = document.getElementById("body");
       console.log("body", body.childNodes);
+      console.log("html children", document.documentElement.childNodes);
     </script>
 
     <script>
