--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -18,31 +18,31 @@
     </div>
 
     <script>
-      for (const node of document.body.childNodes) {
-        console.log(node);
-      }
+      // for (const node of document.body.childNodes) {
+      //   console.log(node);
+      // }
     </script>
 
     <script>
-      for (let i = 0; i < document.documentElement.childNodes.length; i++) {
-        console.log(i, document.documentElement.childNodes[i]);
-      }
+      // for (let i = 0; i < document.documentElement.childNodes.length; i++) {
+      //   console.log(i, document.documentElement.childNodes[i]);
+      // }
     </script>
 
     <script>
-      const body = document.getElementById("body");
-      console.log("body", body.childNodes);
-      console.log("html children", document.documentElement.childNodes);
+      // const body = document.getElementById("body");
+      // console.log("body", body.childNodes);
+      // console.log("html children", document.documentElement.childNodes);
     </script>
 
     <script>
-      console.log("From BODY", document.body);
+      // console.log("From BODY", document.body);
     </script>
 
     <script>
-      console.log("<html>", document.documentElement);
-      console.log("<head>", document.head);
-      console.log("<body>", document.body);
+      // console.log("<html>", document.documentElement);
+      // console.log("<head>", document.head);
+      // console.log("<body>", document.body);
     </script>
   </body>
 </html>
