--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -26,6 +26,9 @@
 
       const lastChild = body.lastChild;
       console.log(lastChild === body.childNodes[body.childNodes.length - 1]);
+
+      const hasChildNodes = body.hasChildNodes();
+      console.log("hasChildNodes", hasChildNodes);
     </script>
 
     <script>
