--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -17,6 +17,8 @@
       </ul>
     </div>
 
+    <h2>DOM Collections</h2>
+
     <script>
       const body = document.body;
       console.log(body.childNodes);
