--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -20,17 +20,17 @@
     <h2>DOM Collections</h2>
 
     <script>
-      const body = document.body;
-      console.log(body.childNodes);
+      // const body = document.body;
+      // console.log(body.childNodes);
 
-      const firstChild = body.firstChild;
-      console.log(firstChild === body.childNodes[0]);
+      // const firstChild = body.firstChild;
+      // console.log(firstChild === body.childNodes[0]);
 
-      const lastChild = body.lastChild;
-      console.log(lastChild === body.childNodes[body.childNodes.length - 1]);
+      // const lastChild = body.lastChild;
+      // console.log(lastChild === body.childNodes[body.childNodes.length - 1]);
 
-      const hasChildNodes = body.hasChildNodes();
-      console.log("hasChildNodes", hasChildNodes);
+      // const hasChildNodes = body.hasChildNodes();
+      // console.log("hasChildNodes", hasChildNodes);
     </script>
 
     <script>
