--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -17,6 +17,13 @@
       </ul>
     </div>
 
+    <script>
+      const body = document.getElementById("body");
+      for (let node of body.childNodes) {
+        console.log(node);
+      }
+    </script>
+
     <h2>DOM Collections</h2>
 
     <script>
