--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -18,10 +18,15 @@
     </div>
 
     <script>
-      const body = document.getElementById("body");
-      for (let node of body.childNodes) {
-        console.log(node);
-      }
+      console.log(body.childNodes.filter);
+      console.log(Array.from(body.childNodes).filter);
+    </script>
+
+    <script>
+      // const body = document.getElementById("body");
+      // for (let node of body.childNodes) {
+      //   console.log(node);
+      // }
     </script>
 
     <h2>DOM Collections</h2>
