--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -26,6 +26,10 @@
       const div = document.createElement("div");
       body.append(div);
       console.log(childNodes);
+
+      for (const node in childNodes) {
+        console.log(node);
+      }
     </script>
 
     <script>
