--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -41,6 +41,8 @@
 
     <h2>DOM Collections</h2>
 
+    <h2>Siblings and the parent</h2>
+
     <script>
       // const body = document.body;
       // console.log(body.childNodes);
