--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -18,18 +18,18 @@
     </div>
 
     <script>
-      console.log(body.childNodes.filter);
-      console.log(Array.from(body.childNodes).filter);
+      // console.log(body.childNodes.filter);
+      // console.log(Array.from(body.childNodes).filter);
 
-      const childNodes = body.childNodes;
-      console.log(childNodes);
-      const div = document.createElement("div");
-      body.append(div);
-      console.log(childNodes);
+      // const childNodes = body.childNodes;
+      // console.log(childNodes);
+      // const div = document.createElement("div");
+      // body.append(div);
+      // console.log(childNodes);
 
-      for (const node in childNodes) {
-        console.log(node);
-      }
+      // for (const node in childNodes) {
+      //   console.log(node);
+      // }
     </script>
 
     <script>
