--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -18,6 +18,10 @@
     </div>
 
     <script>
+      console.log(document.body.parentNode);
+    </script>
+
+    <script>
       // console.log(body.childNodes.filter);
       // console.log(Array.from(body.childNodes).filter);
 
