--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -18,7 +18,7 @@
     </div>
 
     <script>
-      console.log(document.body.parentNode);
+      console.log(document.body.parentNode === document.documentElement);
     </script>
 
     <script>
