--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -18,9 +18,14 @@
     </div>
 
     <script>
-      console.log(document.body.parentNode === document.documentElement);
-      console.log(document.head.nextSibling);
-      console.log(document.body.previousSibling);
+      console.log(body.firstChild.nextSibling);
+      console.log(body.lastChild.previousSibling);
+    </script>
+
+    <script>
+      // console.log(document.body.parentNode === document.documentElement);
+      // console.log(document.head.nextSibling);
+      // console.log(document.body.previousSibling);
     </script>
 
     <script>
