--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -18,8 +18,8 @@
     </div>
 
     <script>
-      console.log(body.firstChild.nextSibling);
-      console.log(body.lastChild.previousSibling);
+      // console.log(body.firstChild.nextSibling);
+      // console.log(body.lastChild.previousSibling);
     </script>
 
     <script>
@@ -53,6 +53,8 @@
     <h2>DOM Collections</h2>
 
     <h2>Siblings and the parent</h2>
+
+    <h2>Element-only navigation</h2>
 
     <script>
       // const body = document.body;
