--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <!-- <head>
+  <head>
     <title>Walking the DOM</title>
     <script>
       console.log("From HEAD", document.body);
     </script>
-  </head> -->
+  </head>
   <body>
     <h1>Children: childNodes, firstChild, lastChild</h1>
 
@@ -16,6 +16,10 @@
         <li><b>Information</b></li>
       </ul>
     </div>
+
+    <script>
+      console.log();
+    </script>
 
     <script>
       // console.log(body.firstChild.nextSibling);
