--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -19,6 +19,8 @@
 
     <script>
       console.log(document.head.parentElement === document.documentElement);
+      console.log(document.head.nextElementSibling);
+      console.log(document.body.previousElementSibling);
     </script>
 
     <script>
