--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -18,9 +18,13 @@
     </div>
 
     <script>
-      console.log(document.head.parentElement === document.documentElement);
-      console.log(document.head.nextElementSibling);
-      console.log(document.body.previousElementSibling);
+      console.log("Programar exige paciencia");
+    </script>
+
+    <script>
+      // console.log(document.head.parentElement === document.documentElement);
+      // console.log(document.head.nextElementSibling);
+      // console.log(document.body.previousElementSibling);
     </script>
 
     <script>
