--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -18,7 +18,13 @@
     </div>
 
     <script>
-      console.log("Programar exige paciencia");
+      console.log(body.parentElement);
+      console.log(body.firstElementChild);
+      console.log(body.lastElementChild);
+    </script>
+
+    <script>
+      // console.log("Programar exige paciencia");
     </script>
 
     <script>
