--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -18,9 +18,13 @@
     </div>
 
     <script>
-      console.log(body.parentElement);
-      console.log(body.firstElementChild);
-      console.log(body.lastElementChild);
+      // console.log(body.parentElement);
+      // console.log(body.firstElementChild);
+      // console.log(body.lastElementChild);
+
+      console.log(body.firstElementChild.parentElement);
+      console.log(body.firstElementChild.nextElementSibling);
+      console.log(body.lastElementChild.previousElementSibling);
     </script>
 
     <script>
