--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -18,14 +18,19 @@
     </div>
 
     <script>
+      console.log(document.documentElement.parentNode);
+      console.log(document.documentElement.parentElement);
+    </script>
+
+    <script>
       // console.log(body.parentElement);
       // console.log(body.firstElementChild);
       // console.log(body.lastElementChild);
       // console.log(body.children);
 
-      for (const elem of body.children) {
-        console.log(elem);
-      }
+      // for (const elem of body.children) {
+      //   console.log(elem);
+      // }
 
       // console.log(body.firstElementChild.parentElement);
       // console.log(body.firstElementChild.nextElementSibling);
