--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -95,6 +95,8 @@
 
     <h2>Element-only navigation</h2>
 
+    <h2>More links: tables</h2>
+
     <script>
       // const body = document.body;
       // console.log(body.childNodes);
@@ -138,9 +140,9 @@
     </script>
 
     <script>
-      for (const elem of document.body.children) {
-        console.log(elem);
-      }
+      // for (const elem of document.body.children) {
+      //   console.log(elem);
+      // }
     </script>
   </body>
 </html>
