--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -7,7 +7,18 @@
     </script>
   </head>
   <body>
-    <h1>Children: childNodes, firstChild, lastChild</h1>
+    <table id="table">
+      <tr>
+        <td>one</td>
+        <td>two</td>
+      </tr>
+      <tr>
+        <td>three</td>
+        <td>four</td>
+      </tr>
+    </table>
+
+    <!-- <h1>Children: childNodes, firstChild, lastChild</h1>
 
     <div id="body">
       <div>Begin</div>
@@ -15,7 +26,7 @@
       <ul>
         <li><b>Information</b></li>
       </ul>
-    </div>
+    </div> -->
 
     <script>
       // let elem =
