--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -4,7 +4,8 @@
     <title>Walking the DOM</title>
     <style>
       table,
-      td {
+      td,
+      th {
         border: 1px solid black;
       }
     </style>
@@ -15,8 +16,11 @@
   <body>
     <table id="table">
       <caption>
-        Numbers
+        List of numbers
       </caption>
+      <tr>
+        <th colspan="2">Numbers</th>
+      </tr>
       <tr>
         <td>one</td>
         <td>two</td>
