--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -18,9 +18,11 @@
       <caption>
         List of numbers
       </caption>
-      <tr>
-        <th colspan="2">Numbers</th>
-      </tr>
+      <thead>
+        <tr>
+          <th colspan="2">Numbers</th>
+        </tr>
+      </thead>
       <tr>
         <td>one</td>
         <td>two</td>
@@ -29,6 +31,11 @@
         <td>three</td>
         <td>four</td>
       </tr>
+      <tfoot>
+        <tr>
+          <th colspan="2">copyright</th>
+        </tr>
+      </tfoot>
     </table>
 
     <!-- <h1>Children: childNodes, firstChild, lastChild</h1>
