--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -38,6 +38,11 @@
       </tfoot>
     </table>
 
+    <script>
+      const rows = table.rows;
+      console.log(rows);
+    </script>
+
     <!-- <h1>Children: childNodes, firstChild, lastChild</h1>
 
     <div id="body">
