--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -40,6 +40,8 @@
 
     <script>
       const rows = table.rows;
+      const tHead = table.tHead;
+      console.log(tHead);
       console.log(rows);
     </script>
 
