--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -41,6 +41,11 @@
     <script>
       const rows = table.rows;
       const tHead = table.tHead;
+      const caption = table.caption;
+      const tFoot = table.tFoot;
+      console.log(tFoot);
+
+      console.log(caption);
       console.log(tHead);
       console.log(rows);
     </script>
