--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -49,6 +49,10 @@
       const tFoot = table.tFoot;
       const tBodies = table.tBodies;
 
+      console.log(tBodies[0].rows);
+      console.log(tHead.rows);
+      console.log(tFoot.rows);
+
       console.log(tBodies);
       console.log(tFoot);
       console.log(caption);
